--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "labecommerce-backend2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.js",  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "tsc && node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Humbertosilva06/labecommerce-backend2/issues"
   },
-  "homepage": "https://github.com/Humbertosilva06/labecommerce-backend2#readme"
+  "homepage": "https://github.com/Humbertosilva06/labecommerce-backend2#readme",
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "typescript": "^5.0.4"
+  }
 }
